kube_files/02_pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: profiles-app
  name: profiles-app
  labels:
    run: profiles-app
spec:
  containers:
  - name: database
    image: ghcr.io/evanespen/cours_k8s/cours-k8s-db:latest
    ports:
    - containerPort: 5432
      name: database-port
  - name: backend
    image: ghcr.io/evanespen/cours_k8s/cours-k8s-back:latest
    ports:
    - containerPort: 8000
      name: backend-port
  - name: frontend
    image: ghcr.io/evanespen/cours_k8s/cours-k8s-front:latest
    ports:
    - containerPort: 8001
      name: frontend-port
