kube_files/04_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profiles-app-ingress
  namespace: profiles-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: profiles-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profiles-app-svc
                port:
                  number: 8001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: profiles-app-svc
                port:
                  number: 8000
